<resources>
    <string name="app_name">ElabSignup</string>

    <string name="index_ImageView_ElabIcon">科中图标</string>
    <string name="index_TextView_Longitude_Test">经度：</string>
    <string name="index_TextView_Latitude_Test">纬度：</string>
    <string name="index_Button_Signup">签到</string>
    <string name="index_Menu_Login">登录账户</string>
    <string name="index_Menu_LogView">查看日志</string>

    <string name="login_EditText_AccountHint">请输入账户</string>
    <string name="login_EditText_PasswordHint">请输入密码</string>
    <string name="login_Button_Login">登录</string>
    <string name="login_network_failed">网络连接失败,请检查手机联网功能是否正常</string>

    <string name="index_Toast_SuccessWithoutGPS">基站定位成功,GPS定位失败</string>
    <string name="index_Toast_SuccessWithoutWifi">基站定位成功,Wifi定位失败</string>
    <string name="index_Toast_FailWithoutBase">定位失败,手机信号强度太弱</string>
    <string name="index_Toast_FailWithoutData">定位失败,未返回位置数据</string>
    <string name="index_Toast_FailWithoutBaseAndWifi">定位失败,SIM卡或Wifi功能异常</string>
    <string name="index_Toast_FailWithoutSimAndWifi">定位失败,未检测到SIM卡和Wifi</string>
    <string name="index_Toast_FailWithFlightMode">定位失败,飞行模式下无法定位</string>
    <string name="index_Toast_FailWithoutAccess">定位失败,无法获取任何定位依据</string>
    <string name="index_Toast_FailWithoutPermission">定位失败,未打开定位开关或赋予权限</string>
</resources>