<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexActivity">

    <ImageView
        android:id="@+id/index_ImageView_ElabIcon"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="176dp"
        android:src="@drawable/elab_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/index_ImageView_ElabIcon" />

    <TextView
        android:id="@+id/index_TextView_Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/index_TextView_Longitude_Test"
        app:layout_constraintBottom_toTopOf="@+id/index_TextView_Latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/index_ImageView_ElabIcon" />

    <TextView
        android:id="@+id/index_TextView_Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_TextView_Latitude_Test"
        app:layout_constraintBottom_toTopOf="@+id/index_Button_Signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/index_Button_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:text="@string/index_Button_Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>